# assistente-desktop-neon

./: .gitignore  ESPECIFICACAO.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/BalaoDialogo/: BalaoDialogo.css  BalaoDialogo.tsx
src/components/Personagem/: Base.tsx  Personagem.css  Personagem.tsx
src/hooks/: useDrag.ts  usePosition.ts  useQuadrante.ts
src/styles/: global.css
src/utils/: animacoes.ts  config.ts  quadrantes.ts
webhook/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  queue-worker.js  relay-agent.js
webhook/src/: index.ts  router.ts
webhook/src/handlers/: event.ts  message.ts  register.ts  status.ts
webhook/src/services/: agentRouter.ts
webhook/src/types/: index.ts
