[package]
name = "assistente-desktop-neon"
version = "1.0.0"
description = "👻 Neon — Assistente virtual overlay para Windows"
authors = ["Iago Frederick Cardoso"]
edition = "2021"

[package.metadata]


[lib]
name = "assistente_desktop_neon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
